--- a/wp-content/themes/hcglobal/assets/css/global.less
+++ b/wp-content/themes/hcglobal/assets/css/global.less
@@ -3,7 +3,7 @@
 @darkgray: #424242;
 @maroon: #b12124;
 
-*{font-family: 'Montserrat', sans-serif;font-size:18px;line-height: 1.3;}
+*{font-family: 'Montserrat', sans-serif;font-size:18px;line-height: 1.3;color:@darkgray;}
 
 p{
 	margin-bottom: 1rem;
@@ -46,7 +46,7 @@ h1:first-line,h2:first-line{line-height: .8;}
 }
 .grad-d-top-l-bot{
 	background: rgba(229,229,229,0.5);
-	background: linear-gradient(0deg, rgba(229,229,229,1) 5%, rgba(229,229,229,0.5) 50%, rgba(104,104,104,1) 100%);
+	background: linear-gradient(0deg, rgba(229,229,229,1) 5%, rgba(180,180,180,0.5) 50%, rgba(104,104,104,1) 100%);
 }
 .grad-l-top{
 	background: rgba(229,229,229,0.5);
